--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ZNK5\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
+user.properties.file=/home/kuro/.netbeans/11.0/build.properties
